--- a/libs/organization/src/lib/organization/forms/organization-form-address/organization-form-address.component.html
+++ b/libs/organization/src/lib/organization/forms/organization-form-address/organization-form-address.component.html
@@ -6,7 +6,7 @@
     <mat-label>Street</mat-label>
     <input test-id="address-street" matInput placeholder="Street" aria-label="street" formControlName="street" />
   </mat-form-field>
-  <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="15px" fxLayout.lt-md="column">
+  <div>
     <mat-form-field appearance="outline">
       <mat-label>City</mat-label>
       <input test-id="address-city" matInput placeholder="City" aria-label="city" formControlName="city" />
