--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
@@ -25,12 +25,15 @@ footer {
     }
   }
 
-  .videos {
+  ul.videos {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 16px;
+    list-style: none;
+    margin:0;
+    padding-left: 0;
 
-    article {
+    li {
       margin: 0 24px;
       video-viewer {
         display: block;
