--- a/libs/organization/src/lib/organization/forms/organization-form-address/organization-form-address.component.scss
+++ b/libs/organization/src/lib/organization/forms/organization-form-address/organization-form-address.component.scss
@@ -1,3 +1,18 @@
+@import "@angular/flex-layout/mq";
+
 mat-form-field {
   width: 100%;
+}
+
+div {
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@include layout-bp(lt-lg) {
+  div {
+    flex-direction: column;
+  }
 }
