change requests merge back 2

--- a/libs/analytics/src/lib/components/pie-chart/pie-chart.component.html
+++ b/libs/analytics/src/lib/components/pie-chart/pie-chart.component.html
@@ -1,7 +1,9 @@
 <header>
-  <mat-icon svgIcon="business"></mat-icon>
   <article>
-    <h5>Split by Company Activity</h5>
+    <h5>
+      <mat-icon svgIcon="business"></mat-icon>
+      <span>Split by Company Activity</span>
+    </h5>
     <p class="mat-caption">Learn who are the users who were interested in this Title.</p>
   </article>
 
