--- a/libs/analytics/src/lib/components/map/map.component.html
+++ b/libs/analytics/src/lib/components/map/map.component.html
@@ -1,7 +1,9 @@
 <header>
-  <mat-icon svgIcon="landscape"></mat-icon>
   <article>
-    <h5>Split by Company Territory</h5>
+    <h5>
+      <mat-icon svgIcon="landscape"></mat-icon>
+      <span>Split by Company Territory</span>
+    </h5>
     <p class="mat-caption">Learn where are the interested people from.</p>
   </article>
   <button mat-icon-button *ngIf="selected" (click)="toggleSelect(selected)" matTooltip="Remove selection">
