--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -9,7 +9,7 @@
               <mat-icon svgIcon="group"></mat-icon>
               <span class="mat-body-2">Number of attendees</span>
             </span>
-            <h2>{{ attendeesAnalytics.length }}</h2>
+            <h2>{{ acceptedAnalytics.length }}</h2>
           </mat-card>
           <mat-card class="attendees">
             <span fxLayout="row" fxLayoutAlign="start center">
@@ -32,7 +32,7 @@
               </ng-template>
             </button>
           </article>
-          <bf-table pagination="50" useFilter [source]="attendeesAnalytics">
+          <bf-table pagination="50" useFilter [source]="acceptedAnalytics">
             <ng-template colRef="name" label="Name" let-name sort>{{ name | titlecase }}</ng-template>
             <ng-template colRef="email" label="Email Address" let-email sort>{{ email }}</ng-template>
             <ng-template colRef="orgName" label="Company Name" let-orgName sort>{{ orgName || dataMissing }}</ng-template>
