Allow user to make his email adress secret

--- a/libs/user/src/lib/auth/forms/profile/profile.component.html
+++ b/libs/user/src/lib/auth/forms/profile/profile.component.html
@@ -25,6 +25,9 @@
       <mat-label>Email Address</mat-label>
       <input matInput test-id="phone-form" placeholder="Email Address" type="tel" [formControl]="form.get('email')" />
     </mat-form-field>
+
+    <hide-email [control]="form.get('hideEmail')"></hide-email>
+
     <mat-form-field appearance="outline">
       <mat-label>Phone Number</mat-label>
       <input matInput test-id="phone-form" placeholder="Phone Number" type="tel" [formControl]="form.get('phoneNumber')" />
