--- a/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
+++ b/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="signinForm" (ngSubmit)="submited.emit(signinForm)" fxLayout="column">
       <mat-form-field appearance="outline">
         <mat-label>Email Address</mat-label>
-        <input matInput type="email" placeholder="Email Address" formControlName="email" required test-id="email"/>
+        <input matInput type="email" placeholder="Email Address" formControlName="email" required test-id="email" />
         <mat-error *ngIf="signinForm.get('email').hasError('email') && !signinForm.get('email').hasError('required')">
           Please enter a <strong>valid</strong> email address.
         </mat-error>
@@ -14,7 +14,8 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput type="password" placeholder="Password" formControlName="password" required test-id="password"/>
+        <input matInput type="password" placeholder="Password" formControlName="password" required test-id="password" [type]="hidePassword ? 'password' : 'text'"/>
+        <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility()></mat-icon>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="signinForm.get('password').hasError('minlength')">
           Password with less than <strong>6</strong> characters.
