--- a/libs/ui/src/lib/list/page/list-page.component.scss
+++ b/libs/ui/src/lib/list/page/list-page.component.scss
@@ -35,14 +35,16 @@ section {
 
 .export-section {
   margin-bottom: 24px;
+  margin-left: 24px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: flex-start;
 }
 
 .with-export-button {
   justify-content: space-between;
   align-items: center;
+  margin-left: 0;
 }
 
 span.mat-body-2 {
