--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -1,4 +1,4 @@
-@import "@angular/flex-layout/mq";
+@import '@angular/flex-layout/mq';
 
 :host {
   display: flex;
@@ -44,7 +44,7 @@ header {
       align-self: center;
     }
   }
-  
+
   h3 {
     margin-top: 24px;
   }
@@ -69,5 +69,45 @@ header {
   analytics-map {
     width: calc(100% - 8px);
     margin-right: 8px;
+  }
+}
+
+analytics-map.map-insights {
+  width: 100%;
+  flex: 1 1 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.colors-card {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 2;
+  padding: 8px;
+  border-radius: 4px;
+  color: #434773;
+
+  mat-list-item {
+    height: 32px;
+  }
+
+  svg {
+    margin-right: 12px;
+  }
+}
+
+.country-list {
+  padding: 24px;
+  border-radius: 4px;
+  border: 1px solid var(--foreground-divider);
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 300px;
+
+  li {
+    border-bottom: 1px solid var(--foreground-divider);
   }
 }
