--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -12,7 +12,7 @@
         <a mat-fab color="black" routerLink="../import" matTooltip="Import Titles">
           <mat-icon svgIcon="excel"></mat-icon>
         </a>
-      </div>   
+      </div>
     </header>
 
     <ng-container *ngIf="titleAnalytics$ | async as analytics; else loading">
@@ -36,7 +36,7 @@
                   <span>Interactions</span>
                 </h5>
                 <p class="mat-caption">Learn how people interact with your Title.</p>
-    
+
               </analytics-line-chart>
               <analytics-line-chart class="surface" carouselItem [eventNames]="['pageView']" [data]="pageViewsOfPopularTitle$ | async">
                 <h5>
@@ -47,7 +47,7 @@
               </analytics-line-chart>
             </bf-carousel>
           </ng-container>
-    
+
           <a mat-button class="see_titles" routerLink="title">
             <span>View all Titles Activity</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
@@ -56,8 +56,38 @@
 
       </ng-container>
     </ng-container>
+
+    <section>
+      <h3>Most active buyers in the world</h3>
+      <bf-table [source]="activeBuyers$ | async" clickable useFilter pagination="5">
+        <ng-template colRef="user" label="Name" let-item sort>
+          <b>{{ item | displayName }}</b>
+        </ng-template>
+        <ng-template colRef="user.email" label="Email" let-email sort>
+          {{ email }}
+        </ng-template>
+        <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
+          {{ name }}
+        </ng-template>
+        <ng-template colRef="org.activity" label="Activity" let-activity sort>
+          {{ activity | toLabel:'orgActivity' }}
+        </ng-template>
+        <ng-template colRef="addedToWishlist" label="Titles in Wishlist" let-wishlist sort>
+          {{ wishlist }}
+        </ng-template>
+        <ng-template colRef="promoReelOpened" label="Promotional Elements" let-promoReelOpened sort>
+          {{ promoReelOpened }}
+        </ng-template>
+        <ng-template colRef="screeningRequested" label="Screening Requests" let-screeningRequested sort>
+          {{ screeningRequested }}
+        </ng-template>
+        <ng-template colRef="askingPriceRequested" label="Asking Price Requested" let-askingPriceRequested sort>
+          {{ askingPriceRequested }}
+        </ng-template>
+      </bf-table>
+    </section>
   </ng-container>
-  
+
   <ng-template #noAcceptedMovies>
     <section fxLayout="column" fxLayoutAlign="center center" class="no-accepted-movies">
       <ng-container *ngIf="titles.length; else noMovies">
