Fix Review part 1

--- a/libs/event/src/lib/pages/analytics/analytics.component.html
+++ b/libs/event/src/lib/pages/analytics/analytics.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="isEventStarted(event$ | async)">
   <h2>Statistics</h2>
-  <ng-container *ngIf="analytics as analytics; else loading">
-    <ng-container *ngIf="analytics.length else noAnalytics">
+  <ng-container *ngIf="acceptedAnalytics as analytics; else loading">
+    <ng-container *ngIf="acceptedAnalytics.length else noAnalytics">
       <section class="analytics">
         <span fxLayout="row" fxLayoutGap="24px">
           <mat-card class="attendees">
