--- a/apps/festival/festival/src/app/event/login/login.component.html
+++ b/apps/festival/festival/src/app/event/login/login.component.html
@@ -20,7 +20,8 @@
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
-      <input test-id="password" matInput type="password" placeholder="Password" formControlName="password" required />
+      <input test-id="password" matInput type="password" placeholder="Password" formControlName="password" required [type]="hidePassword ? 'password' : 'text'"/>
+      <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility()></mat-icon>
       <mat-error *ngIf="form.get('password').hasError('required')">
         Password is <strong>required</strong> 
       </mat-error>
@@ -31,7 +32,6 @@
         New password with more than <strong>24</strong> characters.
       </mat-error>
       <mat-hint>Between 6 and 24 characters.</mat-hint>
-
     </mat-form-field>
 
     <footer fxLayout="column" fxLayoutGap="16px">
