--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -130,9 +130,9 @@
             [errorStateMatcher]="passwordsMatcher"
             required
             test-id="password-confirm"
-            [type]="hidePassword ? 'password' : 'text'"
+            [type]="hideConfirmationPassword ? 'password' : 'text'"
           />
-          <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility()></mat-icon>
+          <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility()></mat-icon>
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
             New password confirmation is <strong>required</strong>.
