Eye password - Profile page

--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -12,7 +12,9 @@
           type="password"
           placeholder="Current Password"
           formControlName="current"
+          [type]="hideCurrentPassword ? 'password' : 'text'"
         />
+      <mat-icon matSuffix svgIcon="visibility" (click)=currentPasswordVisibility()></mat-icon>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>New Password</mat-label>
@@ -23,8 +25,10 @@
           placeholder="New Password"
           formControlName="next"
           [errorStateMatcher]="currentPasswordMatch"
+          [type]="hideNewPassword ? 'password' : 'text'"
           required
         />
+        <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility()></mat-icon>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
           New password is <b>required</b>.
@@ -48,8 +52,10 @@
           placeholder="New Password Confirmation"
           formControlName="confirm"
           [errorStateMatcher]="passwordsMatcher"
+          [type]="hideConfirmationPassword ? 'password' : 'text'"
           required
         />
+        <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility()></mat-icon>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
           New password confirmation is <b>required</b>.
