put map legend into analytics map component.

--- a/libs/analytics/src/lib/components/map/map.component.scss
+++ b/libs/analytics/src/lib/components/map/map.component.scss
@@ -33,3 +33,21 @@ mat-spinner {
 mat-list.horizontal {
   flex: 0 0 300px;
 }
+
+.legend {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  z-index: 2;
+  padding: 8px;
+  border-radius: 4px;
+  color: #434773;
+
+  mat-list-item {
+    height: 32px;
+  }
+
+  svg {
+    margin-right: 12px;
+  }
+}
