--- a/libs/analytics/src/lib/components/map/map.component.html
+++ b/libs/analytics/src/lib/components/map/map.component.html
@@ -26,9 +26,36 @@
     <ng-container *ngIf="selected">
       <map-feature [tag]="selected" color="#3c64f7" (click)="toggleSelect(selected)"></map-feature>
     </ng-container>
-    <ng-container *ngIf="mapLegend">
-      <ng-container *ngTemplateOutlet="mapLegend"></ng-container>
-    </ng-container>
+
+    <!-- Legend -->
+    <aside class="legend" *ngIf="showLegend">
+      <mat-list>
+        <mat-list-item>
+          <svg viewBox="0 0 100 100" width="32px" height="16px">
+            <rect fill="#001ec7" x="0" y="0" width="150" height="100" rx="10" />
+          </svg>
+          <span class="mat-caption">> 100</span>
+        </mat-list-item>
+        <mat-list-item>
+          <svg viewBox="0 0 100 100" width="32px" height="16px">
+            <rect fill="#3c64f7" x="0" y="0" width="150" height="100" rx="10" />
+          </svg>
+          <span class="mat-caption">> 50</span>
+        </mat-list-item>
+        <mat-list-item>
+          <svg viewBox="0 0 100 100" width="32px" height="16px">
+            <rect fill="#8da4fa" x="0" y="0" width="150" height="100" rx="10" />
+          </svg>
+          <span class="mat-caption">> 5</span>
+        </mat-list-item>
+        <mat-list-item>
+          <svg viewBox="0 0 100 100" width="32px" height="16px">
+            <rect fill="#dee5ff" x="0" y="0" width="150" height="100" rx="10" />
+          </svg>
+          <span class="mat-caption">≤ 5</span>
+        </mat-list-item>
+      </mat-list>
+    </aside>
   </world-map>
   <mat-list [ngClass]="{horizontal}">
     <mat-list-item *ngFor="let top of topCountries">
