--- a/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
+++ b/libs/ui/src/lib/form/password-confirm/password-confirm.component.html
@@ -7,8 +7,10 @@
       type="password"
       placeholder="New Password"
       formControlName="password"
+      [type]="hideNewPassword ? 'password' : 'text'"
       required
     />
+    <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility()></mat-icon>
     <mat-hint>Between 6 and 24 characters.</mat-hint>
     <mat-error *ngIf="form.get('password').hasError('required')">
       New password is <strong>required</strong>.
@@ -29,8 +31,10 @@
       placeholder="New Password Confirmation"
       formControlName="confirm"
       [errorStateMatcher]="passwordsMatcher"
+      [type]="hideConfirmationPassword ? 'password' : 'text'"
       required
     />
+    <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility()></mat-icon>
     <mat-hint>Rewrite new password for confirmation.</mat-hint>
     <mat-error *ngIf="form.get('confirm').hasError('required')">
       New password confirmation is <strong>required</strong>.
