--- a/libs/user/src/lib/auth/components/hide-email/hide-email.component.html
+++ b/libs/user/src/lib/auth/components/hide-email/hide-email.component.html
@@ -1,6 +1,5 @@
-<mat-slide-toggle [checked]="control.value" (change)="toggle($event)"></mat-slide-toggle>
-<p>Hide my email</p>
-<p class="mat-caption">Your email address wil be visible to all {{ currentApp | appName }} users unless you decide to hide it.</p>
+<mat-slide-toggle [formControl]="control">Hide my email</mat-slide-toggle>
+<p class="mat-caption">Your email address will be visible to all Archipel users unless you decide to hide it.</p>
 <p class="mat-caption">
   NB: Please note that in the event that you interact with a sales agent or their film(s), your email will be made visible to them regardless. 
   For more information, please refer to our Privacy Policy.
