added movie open icon

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -70,6 +70,15 @@
     </ng-container>
 
     <section>
+      <h3>
+        <mat-icon svgIcon="movie_open"></mat-icon>
+        <span>Buyers' Insights</span>
+      </h3>
+      <analytics-map class="surface map-insights" [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend>
+      </analytics-map>
+    </section>
+
+    <section>
       <h3>Most active buyers in the world</h3>
       <bf-table [source]="activeBuyers$ | async" clickable useFilter pagination="5">
         <ng-template colRef="user" label="Name" let-item sort>
@@ -97,12 +106,6 @@
           {{ askingPriceRequested }}
         </ng-template>
       </bf-table>
-    </section>
-
-    <section>
-      <h3>Buyers' Insights</h3>
-      <analytics-map class="surface map-insights" [data]="activeCountries$ | async" [topCount]="5" horizontal showLegend>
-      </analytics-map>
     </section>
   </ng-container>
 
