--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -14,7 +14,7 @@
           formControlName="current"
           [type]="hideCurrentPassword ? 'password' : 'text'"
         />
-      <mat-icon matSuffix svgIcon="visibility" (click)=currentPasswordVisibility()></mat-icon>
+      <mat-icon matSuffix svgIcon="visibility" (click)=currentPasswordVisibility() matTooltip="{{ hideCurrentPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>New Password</mat-label>
@@ -28,7 +28,7 @@
           [type]="hideNewPassword ? 'password' : 'text'"
           required
         />
-        <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility()></mat-icon>
+        <mat-icon matSuffix svgIcon="visibility" (click)=newPasswordVisibility() matTooltip="{{ hideNewPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
         <mat-hint>Between 6 and 24 characters.</mat-hint>
         <mat-error *ngIf="form.get('next').hasError('required')">
           New password is <b>required</b>.
@@ -55,7 +55,7 @@
           [type]="hideConfirmationPassword ? 'password' : 'text'"
           required
         />
-        <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility()></mat-icon>
+        <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility() matTooltip="{{ hideConfirmationPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
         <mat-hint>Please rewrite your password for confirmation.</mat-hint>
         <mat-error *ngIf="form.get('confirm').hasError('required')">
           New password confirmation is <b>required</b>.
