--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -105,7 +105,7 @@
             test-id="password"
             [type]="hidePassword ? 'password' : 'text'"
           />
-          <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility()></mat-icon>
+          <mat-icon matSuffix svgIcon="visibility" (click)=passwordVisibility() matTooltip="{{ hidePassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
           <mat-hint>Between 6 and 24 characters.</mat-hint>
           <mat-error *ngIf="form.get('password').hasError('required')">
             New password is <strong>required</strong>.
@@ -132,7 +132,7 @@
             test-id="password-confirm"
             [type]="hideConfirmationPassword ? 'password' : 'text'"
           />
-          <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility()></mat-icon>
+          <mat-icon matSuffix svgIcon="visibility" (click)=confirmationPasswordVisibility() matTooltip="{{ hideConfirmationPassword ? 'Show Password' : 'Hide Password' }}"></mat-icon>
           <mat-hint>Please rewrite your password for confirmation.</mat-hint>
           <mat-error *ngIf="form.get('confirm').hasError('required')">
             New password confirmation is <strong>required</strong>.
